--- a/databutler_widgets/examples/playground.ipynb
+++ b/databutler_widgets/examples/playground.ipynb
@@ -12,14 +12,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "id": "7c715351",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "a421f95f627644a1861e842f5e23d789",
+       "model_id": "e6e70417405c422393944a497eaa8aa6",
        "version_major": 2,
        "version_minor": 0
       },
@@ -38,45 +38,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "7eff39e4-e542-42cf-b90b-fa28ee5ce64a",
    "metadata": {},
-   "outputs": [],
-   "source": [
-    "w.value = \"Wow\""
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "id": "95b37421-1665-4e6a-ab43-c8209cf0fd6c",
-   "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'Wow Nice'"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "w.value"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "id": "3fc0552f-36a0-4acc-87f0-163cd7ab5af9",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0"
+       "'pie chart'"
       ]
      },
      "execution_count": 4,
@@ -85,49 +54,37 @@
     }
    ],
    "source": [
-    "w.callback_dummy"
+    "w.search_box_value"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "id": "bb688e71-2f16-4ec4-9c48-75f3b0dcf6e3",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "MYGLOBAL = 2\n",
-    "def dummy():\n",
-    "    global MYGLOBAL\n",
-    "    MYGLOBAL = 3\n",
-    "    \n",
-    "w.callback_method(dummy)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "id": "354ba5f0-3c53-4df6-b165-1b2f39e699a7",
+   "execution_count": 4,
+   "id": "95b37421-1665-4e6a-ab43-c8209cf0fd6c",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "3"
+       "[{'id': '1', 'title': 'pie chart'},\n",
+       " {'id': '2', 'title': 'bar chart'},\n",
+       " {'id': '3', 'title': 'histogram'},\n",
+       " {'id': '4', 'title': 'line'}]"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "MYGLOBAL"
+    "w.search_options"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "dcc262bc-55ae-473a-be2e-38851a13cf18",
+   "id": "af59628a",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -135,7 +92,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -149,7 +106,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.10.2"
   }
  },
  "nbformat": 4,
