Make variants work

--- a/databutler_widgets/examples/playground_synthesize.ipynb
+++ b/databutler_widgets/examples/playground_synthesize.ipynb
@@ -211,62 +211,8 @@
    "outputs": [
     {
      "data": {
-      "text/plain": [
-       "'Draw a pie-chart of [COL0]'"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/plain": [
-       "'\\ndef visualization(df, col0):\\n    import matplotlib.pyplot as plt\\n    counts = df[col0].value_counts()\\n    plt.pie(counts, labels=counts.index, startangle=90, shadow=True)\\n'"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/plain": [
-       "'Draw a pie-chart of [COL0]'"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/plain": [
-       "'\\ndef visualization(df, col0):\\n    import matplotlib.pyplot as plt\\n    counts = df[col0].value_counts()\\n    plt.pie(counts, labels=counts.index, startangle=180)\\n    plt.title(\"Pie-Chart\")\\n'"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/plain": [
-       "'Visualize [COL0] as a histogram'"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/plain": [
-       "'\\ndef visualization(df, col0):\\n    import seaborn as sns\\n    import matplotlib.pyplot as plt\\n    from scipy.stats import norm\\n    sns.distplot(df[col0], kde=False, fit=norm)\\n    plt.title(\"Distribution Plot\")\\n'"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "11c1b1ae502747bf93e878d0d698e723",
+       "model_id": "47e1386a8a71403fa8777a76d96479de",
        "version_major": 2,
        "version_minor": 0
       },
@@ -279,7 +225,7 @@
     }
    ],
    "source": [
-    "synthesize(df, [\"Brick\"])"
+    "synthesize(df, [\"Price\"])"
    ]
   },
   {
